<resources>
    <string name="app_name">Transformers</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <array name="teams">
        <item>Autobots</item>
        <item>Decepticons</item>
    </array>

    <string name="fight">Fight!!!</string>
    <string name="transformer_created">Transformer Created</string>
    <string name="transformer_updated">Transformer Updated</string>
    <string name="create_transformer">Create Transformer</string>
    <string name="edit_transformer">Edit Transformer</string>
    <string name="name">Name</string>
    <string name="strength">Strength</string>
    <string name="intelligence">Intelligence</string>
    <string name="speed">Speed</string>
    <string name="endurance">Endurance</string>
    <string name="rank">Rank</string>
    <string name="courage">Courage</string>
    <string name="firepower">Firepower</string>
    <string name="skill">Skill</string>
    <string name="team">Team</string>
    <string name="submit">Submit</string>
    <string name="a">A</string>
    <string name="d">D</string>
    <string name="overall">Overall</string>
    <string name="battle_result_title">Battle Result</string>
    <string name="battle_decepticons_title">Decepticons</string>
    <string name="battle_autobots_title">Autobots</string>
    <string name="battle_destroyed">Destroyed Transformers</string>
    <string name="battle_winner_title">Winner:</string>
    <string name="battle_tie">Tie</string>

    <string name="error_empty_field">This field should not be empty</string>
    <string name="error_out_range">Value should be between 0 and 10</string>
    <string name="error_digits_only">This field should only contain numbers</string>
    <string name="error_dialog_title">An error has occurred</string>
    <string name="error_dialog_button">Close</string>
</resources>