<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:background="@color/white"
    android:padding="@dimen/padding_10"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_create_edit_title"
        style="@style/TextView.Title"
        android:text="@string/create_transformer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_label_name"
        style="@style/TextView.Label"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_create_edit_title"/>
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_name"/>

    <TextView
        android:id="@+id/tv_label_strength"
        style="@style/TextView.Label"
        android:text="@string/strength"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"/>
    <EditText
        android:id="@+id/et_strength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_strength"/>

    <TextView
        android:id="@+id/tv_label_intelligence"
        style="@style/TextView.Label"
        android:text="@string/intelligence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_strength"/>
    <EditText
        android:id="@+id/et_intelligence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_intelligence"/>

    <TextView
        android:id="@+id/tv_label_speed"
        style="@style/TextView.Label"
        android:text="@string/speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_intelligence"/>
    <EditText
        android:id="@+id/et_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_speed"/>

    <TextView
        android:id="@+id/tv_label_endurance"
        style="@style/TextView.Label"
        android:text="@string/endurance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_speed"/>
    <EditText
        android:id="@+id/et_endurance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_endurance"/>

    <TextView
        android:id="@+id/tv_label_rank"
        style="@style/TextView.Label"
        android:text="@string/rank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_endurance"/>
    <EditText
        android:id="@+id/et_rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_rank"/>

    <TextView
        android:id="@+id/tv_label_courage"
        style="@style/TextView.Label"
        android:text="@string/courage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_rank"/>
    <EditText
        android:id="@+id/et_courage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_courage"/>

    <TextView
        android:id="@+id/tv_label_firepower"
        style="@style/TextView.Label"
        android:text="@string/firepower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_courage"/>
    <EditText
        android:id="@+id/et_firepower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_firepower"/>

    <TextView
        android:id="@+id/tv_label_skill"
        style="@style/TextView.Label"
        android:text="@string/skill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_firepower"/>
    <EditText
        android:id="@+id/et_skill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label_skill"/>

    <TextView
        android:id="@+id/tv_label_team"
        style="@style/TextView.Label"
        android:text="@string/team"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_skill"/>
   <Spinner
       android:id="@+id/sp_team"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/tv_label_team"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_team"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>