<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_battle_title"
        style="@style/TextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battle_result_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_battle_destroyed_title"
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_30"
        android:text="@string/battle_destroyed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_battle_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_battle_autobots"
        style="@style/TextView.Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_30"
        app:layout_constraintBottom_toBottomOf="@id/rv_battle_decepticons"
        app:layout_constraintEnd_toStartOf="@id/rv_battle_decepticons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_battle_autobots_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_battle_decepticons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_30"
        app:layout_constraintBottom_toBottomOf="@id/rv_battle_autobots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rv_battle_autobots"
        app:layout_constraintTop_toBottomOf="@id/tv_battle_decepticons_title"/>

    <TextView
        android:id="@+id/tv_battle_decepticons_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battle_decepticons_title"
        app:layout_constraintEnd_toStartOf="@id/tv_battle_autobots_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_battle_destroyed_title"/>

    <TextView
        android:id="@+id/tv_battle_autobots_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battle_autobots_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_battle_decepticons_title"
        app:layout_constraintTop_toBottomOf="@id/tv_battle_destroyed_title"/>

    <TextView
        android:id="@+id/tv_battle_winner_title"
        style="@style/TextView.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_30"
        android:text="@string/battle_winner_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_battle_autobots"/>

    <TextView
        android:id="@+id/tv_battle_winner_value"
        style="@style/TextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_battle_winner_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>